--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -168,6 +168,7 @@ body {       /* Can alternatively define in html {} or :root {} */
   }
 
 }
+/*
 .title {
   padding-left: 1em;
   grid-column: 1 / -1;
@@ -181,7 +182,7 @@ body {       /* Can alternatively define in html {} or :root {} */
   > .title-inner {
     display: inline-block;
   }
-}
+}*/
 
 @keyframes text-clip {
   from {
