--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -34,7 +34,10 @@
   --custom-font-2: 'Alegreya', serif;
 }
 /*  ----- Viewport ----- elements inherited by all remaining elements ----- */
-
+* {
+  position: relative;
+  box-sizing: border-box;
+}
 body {       /* Can alternatively define in html {} or :root {} */
   /*background: url(images/background.jpg) no-repeat top right;
   background-size: cover;
@@ -255,7 +258,6 @@ header {
   
 }
 .header {
-  box-sizing: border-box;
   z-index: 100;
 
   &:hover {
