--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -659,7 +659,7 @@ td[colSpan="6"] {text-align: center; padding: 10px; padding-top: 20px;}
     }
   }
 
-.background-image {
+img {
   display: block;
   width: 100%;
   height: auto;
