--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -271,14 +271,14 @@ header {
   color: #3a3535;
 }
 
-/*main {
+main {
   padding: 3% 2%;
   margin: 0 7%;
   font-size: 120%;
   min-height: 22vh;
   display: flex;
   flex-direction: column;
-}*/
+}
 
 /*
 section {}
