--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -38,7 +38,7 @@
   /*background: url(images/background.jpg) no-repeat top right;
   background-size: cover;
   background-attachment: fixed;*/
-  background-color: var(--custom-color-light);
+  /*background-color: var(--custom-color-light);
   font-family: var(--custom-font-1); /* Define with at least one font name and its related generic family name.*/
   margin: 0;
   
