--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -40,7 +40,7 @@
   background-attachment: fixed;*/
   /*background-color: var(--custom-color-light);
   font-family: var(--custom-font-1); /* Define with at least one font name and its related generic family name.*/
-  margin: 0;
+  /*margin: 0;
   
   padding: 3vmin;
   color: var(--custom-color-dark);
