--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -34,20 +34,20 @@
   --custom-font-2: 'Alegreya', serif;
 }
 /*  ----- Viewport ----- elements inherited by all remaining elements ----- */
-/*body {       /* Can alternatively define in html {} or :root {} */
+body {       /* Can alternatively define in html {} or :root {} */
   /*background: url(images/background.jpg) no-repeat top right;
   background-size: cover;
   background-attachment: fixed;*/
-  /*background-color: var(--custom-color-light);
+  background-color: var(--custom-color-light);
   font-family: var(--custom-font-1); /* Define with at least one font name and its related generic family name.*/
-  /*margin: 0;
+  margin: 0;
   
   padding: 3vmin;
   color: var(--custom-color-dark);
   max-width: 2000px;
   /*min-width: 1100px;*/
-  /*display: grid;
-}*/
+  display: grid;
+}
 
 .area{
   background: var(--custom-color-light);
@@ -759,7 +759,7 @@ object {}
     transform: rotate(360deg);
   }
 }
-.App {width: 100%;
+/*.App {width: 100%;
   position: absolute;
   top:0vh;
-  height: 100%;}
+  height: 100%;}*/
