--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -10,6 +10,7 @@
     } 
     ...or hosted services like Google Fonts*/ 
     @import url('https://fonts.googleapis.com/css2?family=Alegreya:ital,wght@1,600&family=Roboto+Slab&display=swap');
+    @import url("https://fonts.googleapis.com/css2?family=Prata&display=swap");
   
   /* @import 'node_modules/modern-normalize/modern-normalize.css'; */
         /* npm install modern-normalize
@@ -41,12 +42,16 @@ body {       /* Can alternatively define in html {} or :root {} */
   background-color: var(--custom-color-light);
   font-family: var(--custom-font-1); /* Define with at least one font name and its related generic family name.*/
   margin: 0;
-  
-  padding: 3vmin;
+  /*padding: 3vmin;*/
   color: var(--custom-color-dark);
   max-width: 2000px;
   /*min-width: 1100px;*/
   display: grid;
+}
+
+/*// Replay animation!*/
+body:active * {
+  animation: none !important;
 }
 
 .area{
@@ -56,6 +61,7 @@ body {       /* Can alternatively define in html {} or :root {} */
   height: 0;
 }
 .circles{
+  box-sizing: border-box;
   position: absolute;
   top: 0;
   left: 0;
@@ -70,7 +76,6 @@ body {       /* Can alternatively define in html {} or :root {} */
   list-style: none;
   width: 20px;
   height: 20px;
-  background: rgba(61, 72, 108, 0.2);
   animation: animate 25s linear infinite;
   bottom: -150px;
   
@@ -78,91 +83,101 @@ body {       /* Can alternatively define in html {} or :root {} */
 
 .circles li:nth-child(1){
   left: 25%;
-  width: 80px;
-  height: 80px;
+  width: 20px;
+  height: 20px;
   animation-delay: 0s;
+  background-color: #A6D0DD;
 }
 
 
 .circles li:nth-child(2){
   left: 10%;
-  width: 20px;
-  height: 20px;
+  width: 53px;
+  height: 53px;
   animation-delay: 2s;
   animation-duration: 12s;
+  background-color: #ff6969;
 }
 
 .circles li:nth-child(3){
   left: 70%;
-  width: 20px;
-  height: 20px;
+  width: 167px;
+  height: 167px;
   animation-delay: 4s;
+  background-color: #FFD3B0;
 }
 
 .circles li:nth-child(4){
   left: 40%;
-  width: 60px;
-  height: 60px;
+  width: 80px;
+  height: 80px;
   animation-delay: 0s;
   animation-duration: 18s;
+  background-color: #FFF9DE;
 }
 
 .circles li:nth-child(5){
   left: 65%;
   width: 20px;
   height: 20px;
-  animation-delay: 0s;
+  animation-delay: 20s;
+  background-color: #A6D0DD;
 }
 
 .circles li:nth-child(6){
   left: 75%;
-  width: 110px;
-  height: 110px;
-  animation-delay: 3s;
+  width: 90px;
+  height: 90px;
+  animation-delay: 13s;
+  background-color: #A6D0DD;
 }
 
 .circles li:nth-child(7){
   left: 35%;
-  width: 150px;
-  height: 150px;
+  width: 15px;
+  height: 15px;
   animation-delay: 7s;
+  background-color: #FFD3B0;
 }
 
 .circles li:nth-child(8){
   left: 50%;
-  width: 25px;
-  height: 25px;
+  width: 100px;
+  height: 100px;
   animation-delay: 15s;
   animation-duration: 45s;
+  background-color: #FFF9DE;
 }
 
 .circles li:nth-child(9){
   left: 20%;
-  width: 15px;
-  height: 15px;
+  width: 9px;
+  height: 9px;
   animation-delay: 2s;
   animation-duration: 35s;
+  background-color: #FF6969;
 }
 
 .circles li:nth-child(10){
   left: 85%;
-  width: 150px;
-  height: 150px;
+  width: 18px;
+  height: 18px;
   animation-delay: 0s;
   animation-duration: 11s;
+  background-color: #FF6969;
 }
 @keyframes animate {
 
   0%{
       transform: translateY(0) rotate(0deg);
-      opacity: 1;
-      border-radius: 0;
+      opacity: 0.5;
+      border-radius: 20%;
   }
 
   100%{
       transform: translateY(-1000px) rotate(720deg);
       opacity: 0;
-      border-radius: 50%;
+      border-radius: 100%;
   }
 
 }
@@ -258,9 +273,9 @@ header {
 .header {
   z-index: 100;
 
-  &:hover {
+  /*&:hover {
     opacity: 0.5;
-  }
+  }*/
   display: grid;
   grid-template-columns: 1fr 2fr;
   align-items: center;
@@ -273,7 +288,7 @@ header {
 
 main {
   padding: 3% 2%;
-  margin: 0 7%;
+  margin: 0 5%;
   font-size: 120%;
   min-height: 22vh;
   display: flex;
@@ -316,7 +331,7 @@ a:visited {}
 nav {
   background-color: transparent;
   padding: 0;
-  margin: 3% 7% 0 7%;
+  margin: 3% 5% 0 5%;
   /*border-top: 3px solid var(--custom-color-medium);
   border-bottom: 3px solid var(--custom-color-medium);*/
   text-align: center;
@@ -646,24 +661,24 @@ td[colSpan="6"] {text-align: center; padding: 10px; padding-top: 20px;}
   grid-row: 1;
   grid-column: 2;
   margin-left: -2rem;
-  opacity: 0.7;
-
-  animation: image-in 1s cubic-bezier(0.5, 0, 0.1, 1) 2s backwards;
-
-  @keyframes image-in {
-    from {
-      clip-path: polygon(0 0, 100% 0, 100% 0, 0 0);
-    }
-    to {
-      clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
-    }
+  opacity: 0.6;
   }
 
-img {
+.background-image {
   display: block;
   max-width: 100%;
   height: auto;
-}}
+  animation: image-in 2s cubic-bezier(0.5, 0, 0.1, 1) 2s backwards;
+}
+
+@keyframes image-in {
+  from {
+    clip-path: polygon(0 0, 100% 0, 100% 0, 0 0);
+  }
+  to {
+    clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
+  }}
+
 /*svg {}
 picture {}
   source {}
@@ -762,4 +777,5 @@ object {}
 .App {width: 100%;
   position: absolute;
   top:0vh;
-  height: 100%;}
+  height: 100%;
+}
