--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -11,6 +11,7 @@
     ...or hosted services like Google Fonts*/ 
     @import url('https://fonts.googleapis.com/css2?family=Alegreya:ital,wght@1,600&family=Roboto+Slab&display=swap');
     @import url("https://fonts.googleapis.com/css2?family=Prata&display=swap");
+    @import url('https://fonts.googleapis.com/css2?family=Alegreya:ital,wght@1,600&family=Roboto+Slab&family=Roboto:ital,wght@1,300&display=swap');
   
   /* @import 'node_modules/modern-normalize/modern-normalize.css'; */
         /* npm install modern-normalize
@@ -48,7 +49,6 @@ body {       /* Can alternatively define in html {} or :root {} */
   /*min-width: 1100px;*/
   display: grid;
 }
-
 /*// Replay animation!*/
 body:active * {
   animation: none !important;
@@ -59,6 +59,7 @@ body:active * {
   background: -webkit-linear-gradient(to left, #8f94fb, #4e54c8);  
   width: 100%;
   height: 0;
+  border: 1px solid black;
 }
 .circles{
   box-sizing: border-box;
@@ -66,7 +67,7 @@ body:active * {
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%;
+  height: 120%;
   overflow: hidden;
 }
 
@@ -77,7 +78,7 @@ body:active * {
   width: 20px;
   height: 20px;
   animation: animate 25s linear infinite;
-  bottom: -150px;
+  bottom: -300px;
   
 }
 
@@ -169,7 +170,7 @@ body:active * {
 @keyframes animate {
 
   0%{
-      transform: translateY(0) rotate(0deg);
+      transform: translateY(500px) rotate(0deg);
       opacity: 0.5;
       border-radius: 20%;
   }
@@ -333,6 +334,8 @@ a:visited {}
 */
 /*  ----- Navigation ----- Override text links for navigation only.  */
 nav {
+  z-index: 10000;
+  position: relative;
   background-color: transparent;
   padding: 0;
   margin: 3% 5% 0 5%;
@@ -658,20 +661,39 @@ td[colSpan="6"] {text-align: center; padding: 10px; padding-top: 20px;}
   bottom: 0;
   text-align: left;
 }
-
+.introduction {
+  padding: 5%;
+  font-family: 'Roboto', sans-serif;
+  line-height: 200%;
+}
 .image {
   position: relative;
   box-sizing: border-box;
   grid-row: 1;
   grid-column: 2;
   margin-left: 2rem;
-  opacity: 0.4;
   width: 50vw;
   height: 79vh;
-  background-color: #F45050;
+  background-color: rgba(244, 80, 80, 0.2);
   animation: image-in 2s cubic-bezier(0.5, 0, 0.1, 1) 2s backwards;
   }
-
+.background-image {
+  position: relative;
+  margin-top: 5%;
+  margin-bottom: 5%;
+  margin-left: auto;
+  margin-right: auto;
+  opacity: 0.8; 
+  border-radius: 10%; 
+  /*border: 3px solid #ddd;*/
+  border-right: 3px solid #ddd;
+  border-bottom: 3px solid #ddd;
+  padding: 5px;
+  width: 250px;
+  max-width: 100%;
+  height: auto;
+  display: block;
+}
 @keyframes image-in {
   from {
     clip-path: polygon(0 0, 100% 0, 100% 0, 0 0);
