--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -202,7 +202,7 @@ body:active * {
 
 @keyframes text-clip {
   from {
-    clip-path: polygon(0% 100%, 100% 100%, 100% 100%, 0% 100%);
+    clip-path: polygon(0% 0, 100% 0, 100% 0, 0% 0);
   }
   to {
     clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
@@ -669,6 +669,12 @@ td[colSpan="6"] {text-align: center; padding: 10px; padding-top: 20px;}
   z-index: 30;
 }
 .technologies {display: flex; flex-wrap: wrap;}
+.credits {
+  font-size: 0.7em;
+  font-style: italic;
+  color: gray;
+  text-align: right;
+}
 dt {
   font-weight: bold;
   flex: initial;
@@ -707,8 +713,7 @@ dd {
   background-color: white; 
   z-index: 200;
   padding: 0.3em 1em;
-  opacity: 0.7;
-  font-weight: bold;
+  opacity: 0.8;
   margin: 1em;
 }
 dt:hover {
